--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="hotel">
     <ion-title class="ion-text-center">
-      Myself Hotel
+      Altos Ushuaia Hotel
     </ion-title>
     <ion-buttons slot="end">
       <ion-button (click)= "openLanguagePopover($event)">
