--- a/src/app/home/index/index.page.html
+++ b/src/app/home/index/index.page.html
@@ -1,4 +1,4 @@
-<app-header titulo="Myself Hotel"></app-header>
+<app-header titulo="Altos Ushuaia Hotel"></app-header>
 <ion-content>
     <h2 class="ion-padding" *ngIf="name">{{'INDEX.hola' | translate}} {{name}}!</h2>
     <h2 class="ion-padding" *ngIf="!name">{{'INDEX.continuemos' | translate}} </h2>
