--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,7 +28,7 @@
       <ion-button (click)="onLoginFB()" expand="block" color="primary">{{'HOME.ingresarcon' | translate }} <ion-icon name="logo-facebook">
         </ion-icon>
       </ion-button>
-      <ion-button expand="full" (click)="openAppleSignIn()" *ngIf="showAppleSignIn">
+      <ion-button expand="block" (click)="openAppleSignIn()" color="dark" *ngIf="showAppleSignIn">
         <ion-icon name="logo-apple" slot="start"></ion-icon>
         Sign in with Apple
       </ion-button>
