--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,8 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar color="hotel">
     <ion-buttons slot="start">
-      hola
-      <ion-menu-button color="dark" menu="first" class="menuM"></ion-menu-button>
+      <ion-menu-button color="danger" menu="first" class="menuM">M</ion-menu-button>
     </ion-buttons>
     <ion-title class="ion-text-center" >
       {{titulo}}
