--- a/src/app/core/header/menu/menu.component.html
+++ b/src/app/core/header/menu/menu.component.html
@@ -1,4 +1,4 @@
-<ion-menu side="start" menuId="first" content-id="main-content">
+<ion-menu side="start" menu-id="first" content-id="main-content">
   <ion-header>
     <ion-toolbar color="hotel">
       <ion-title>{{'MENU.menu' | translate }}</ion-title>
