--- a/src/app/home/misdatos/components/update-user/update-user.component.html
+++ b/src/app/home/misdatos/components/update-user/update-user.component.html
@@ -35,12 +35,12 @@
         <ion-item>
           <ion-label>{{'MISDATOS.nacionalidad' | translate }}: </ion-label>
           <br>
-          <ion-input type="text" name="nac" [(ngModel)]="this.userSvc.selectedUser.nac" placeholder="Argentina"></ion-input>
+          <ion-input type="text" name="nac" [(ngModel)]="this.userSvc.selectedUser.nac" placeholder="Ej.: Argentina"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>{{'MISDATOS.fnac' | translate }}: </ion-label>
           <br>
-          <ion-input type="text" name="date" [(ngModel)]="this.userSvc.selectedUser.date" placeholder="dd/mm/aaaa"></ion-input>
+          <ion-input type="text" name="date" [(ngModel)]="this.userSvc.selectedUser.date" placeholder="DD/MM/AAAA Ej 10/11/1988"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>{{'MISDATOS.sexo' | translate }}: </ion-label>
