Fix: compañia, placeholder nacionalidad y nac

--- a/src/app/components/update-user/update-user.component.html
+++ b/src/app/components/update-user/update-user.component.html
@@ -35,12 +35,12 @@
         <ion-item>
           <ion-label>{{'MISDATOS.nacionalidad' | translate }}: </ion-label>
           <br>
-          <ion-input type="text" name="nac" [(ngModel)]="this.userSvc.selectedUser.nac" placeholder="Argentina"></ion-input>
+          <ion-input type="text" name="nac" [(ngModel)]="this.userSvc.selectedUser.nac" placeholder="Italiano"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>{{'MISDATOS.fnac' | translate }}: </ion-label>
           <br>
-          <ion-input type="text" name="date" [(ngModel)]="this.userSvc.selectedUser.date" placeholder="dd/mm/aaaa"></ion-input>
+          <ion-input type="text" name="date" [(ngModel)]="this.userSvc.selectedUser.date" placeholder="Ex: 06/03/1475"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>{{'MISDATOS.sexo' | translate }}: </ion-label>
